--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="/logo192.png" />
-  <link rel="manifest" href="/manifest.json" />
+  <!-- updated href -->
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/meet-app-192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>React App</title>
-  <script defer="defer" src="/static/js/main.1173e3cc.js"></script>
-  <link href="/static/css/main.073c9b0a.css" rel="stylesheet">
+  <!-- <script defer="defer" src="/static/js/main.1173e3cc.js"></script> -->
+  <!-- <link href="%PUBLIC_URL%/manifest.json" rel="stylesheet"> -->
 </head>
 
 <body>
